Update render.yaml for static site configuration

--- a/render.yaml
+++ b/render.yaml
@@ -7,9 +7,10 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
-  - type: web
+
+  - type: static
     name: hrapp-frontend
-    env: static-site
+    env: static
     buildCommand: npm run build
     publishDir: build
     envVars:
